[package]
name = "image-resize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"

serde = { version = "1.0", features = ["derive"] }
bytes = "1.2"
clap = { version = "3.2", features = ["derive"] }

axum = "0.5"
reqwest = { version = "0.11", features = ["gzip", "brotli"] }
hyper = "0.14"
tokio = { version = "1.20", features = ["full"] }
tower-http = { version = "0.3", features = ["cors", "fs", "trace"] }

image = "0.24"
fast_image_resize = "0.9"
